@@ -49,6 +49,9 @@
 /* Host type from configure */
 #undef CONFIG_HOST_TYPE
 
+/* If UNIX domain stream sockets work */
+#undef HAVE_WORKING_UNIX_SOCKETS
+
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
 
