@@ -217,3 +217,4 @@ beta10:
 	  just anywhere in the string.
 	- Fixed setuid bugs when pid_filename was not defined
 	- Possible bug fix of zero-sized object getting stuck in VM.
+	- Configure checks for working UNIX domain stream sockets
